examples/guestbook-service-lb.yaml
# Example: Guestbook service as LoadBalancer (creates AWS NLB)
apiVersion: v1
kind: Service
metadata:
  name: guestbook-ui-loadbalancer
  namespace: default
  annotations:
    # AWS Load Balancer Controller annotations for NLB
    service.beta.kubernetes.io/aws-load-balancer-type: nlb
    service.beta.kubernetes.io/aws-load-balancer-scheme: internet-facing
    service.beta.kubernetes.io/aws-load-balancer-cross-zone-load-balancing-enabled: "true"
spec:
  type: LoadBalancer
  selector:
    app: guestbook-ui
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
